refer to https://segmentfault.com/a/1190000009652980

--- a/ngRoute01/src/app/app.component.html
+++ b/ngRoute01/src/app/app.component.html
@@ -4,5 +4,14 @@
     {{ title }}!
   </h1>
 </div>
-<app-hero-form></app-hero-form>
+
+<!-- <app-hero-form></app-hero-form> -->
+<nav>
+  <a routerLink ="/heroform" >Hero-Form</a>
+  <a routerLink ="/form1" >Form-1</a>
+  <a routerLink ="/form2" >Form-2</a>
+  <a routerLink ="/form3" >Form-3</a>
+</nav>
+<hr/>
 <router-outlet></router-outlet>
+
